List default workouts

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,35 @@
+/* Spacing */
+
 .margin-top {
   margin-top: 80px;
+}
+
+/* Fonts */
+.work-sans-font {
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.merriweather-sans-font {
+  font-family: "Merriweather Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
+/* Body part tags */
+.body-part-tag {
+  background-color: lightgray;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 2px;
+  padding-bottom: 5px;
+  border-radius: 12px;
+}
+
+.body-part-tags {
+  display: inline-block;
+  margin-bottom: 8px; 
 }
