--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-@import './style/colors.css';
+@import './style/var';
+@import './style/color.css';
 @import './style/spacing.css';
-@import './style/fonts.css';
-@import './style/body-parts.css';
+@import './style/font.css';
+@import './style/body-part.css';
 @import './style/navbar.css';
-@import './style/buttons.css';
+@import './style/button.css';
+@import './style/card.css';
