--- a/src/style/container-custom.css
+++ b/src/style/container-custom.css
@@ -1,13 +1,13 @@
 .container-custom {
     width: 70%;
+    min-width: 300px;
     margin: 0 auto;
     margin-top: 40px;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
+    margin-bottom: 40px;
 }
 
 @media screen and (max-width: 1100px) {
+    /* [0; 1100] */
     .container-custom {
         width: 90%;
     }
