--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 @import './style/var';
 @import './style/body-part.css';
 @import './style/container-custom.css';
+@import './shared/style/shared.css';
