--- a/src/workouts/styles/blocks/PaginationBullets.scss
+++ b/src/workouts/styles/blocks/PaginationBullets.scss
@@ -8,9 +8,9 @@
   &_bullet {
     min-width: 2rem;
     min-height: 2rem;
-    background-color: var(--mockup-color);
-    border: 1px solid var(--color-secondary);
+    border: none;
     color: var(--color-black);
+    border-radius: 50%;
     font-family: inherit;
     transition: 0.3s ease;
 
