--- a/src/workouts/styles/blocks/PaginationButton.scss
+++ b/src/workouts/styles/blocks/PaginationButton.scss
@@ -2,10 +2,10 @@
 
 .PaginationButton {
   @extend %flex-center;
-  background-color: var(--color-secondary);
   min-width: 2rem;
   min-height: 2rem;
   border: none;
+  border-radius: 50%;
 
   &-disabled {
     background-color: var(--color-bg);
