--- a/src/style/var.css
+++ b/src/style/var.css
@@ -15,6 +15,7 @@
     */
     --color-white: rgba(250, 250, 250, 1);
     --color-black: rgba(30, 30, 30, .9);
+    --color-secondary: rgb(137, 147, 154);
     --color-blur: rgba(30, 30, 30, .6);
     --color-primary: rgba(17, 80, 132, 0.9);
     --color-primary-very-light: rgba(17, 80, 132, 0);
@@ -22,6 +23,9 @@
     --color-shadow: rgba(7, 32, 53, .5);
     --color-warning: rgba(242, 195, 65, 0.9);
     --color-success: rgba(0, 200, 0, .9);
+    --color-selected: rgba(31, 136, 222, 0.1);
+    --color-unselected: rgba(30, 30, 30, .1);
+    --color-accent: rgb(85, 168, 236);
 
     --font-family-primary: 'Work Sans', sans-serif;
     --font-family-secondary: 'Merriweather', sans-serif;
